src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-ofT-dwF1000-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1000 × 0, bounds: 1280 × 720, states: []
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
